--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abrir Google Maps com Minha Localização</title>
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
     <h1>Ver minha localização no Google Maps</h1>
-    <button onclick="openGoogleMaps()">Abrir Google Maps</button>
+    <button onclick="openGoogleMaps()">📌 Abrir Google Maps</button>
 
     <script src="js/script.js"></script>
 </body>
